testdata/integration/autoscaling_refresh_admission_failure.json
{
  "source": "local signed APIs, real firmware QEMU guests, retained SQLite and ALB sockets",
  "account": "815602947201",
  "prefix": "stackd-lt-guest-15c040e73d",
  "calls": [
    {
      "label": "complete-root-snapshot",
      "service": "ebs",
      "operation": "complete_snapshot",
      "input": {
        "SnapshotId": "snap-4691de47885083ec3",
        "ChangedBlocksCount": 3636
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "b6651f911a5cc5437f1bd46a584de3df",
          "HTTPStatusCode": 202,
          "HTTPHeaders": {
            "content-type": "application/json",
            "x-amzn-requestid": "b6651f911a5cc5437f1bd46a584de3df",
            "date": "Sun, 27 Sep 2026 16:01:00 GMT",
            "content-length": "20"
          },
          "RetryAttempts": 0
        },
        "Status": "pending"
      },
      "request_id": "b6651f911a5cc5437f1bd46a584de3df"
    },
    {
      "label": "register-firmware-image",
      "service": "ec2",
      "operation": "register_image",
      "input": {
        "Name": "stackd-lt-guest-15c040e73d",
        "Architecture": "x86_64",
        "RootDeviceName": "/dev/sda1",
        "VirtualizationType": "hvm",
        "BootMode": "legacy-bios",
        "EnaSupport": true,
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "SnapshotId": "snap-4691de47885083ec3",
              "VolumeSize": 8,
              "VolumeType": "gp3",
              "DeleteOnTermination": true
            }
          }
        ]
      },
      "code": "Success",
      "output": {
        "ImageId": "ami-a48ad9b0ce34af044",
        "ResponseMetadata": {
          "RequestId": "8b626e6d0db3682642ace0920cfddcea",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "8b626e6d0db3682642ace0920cfddcea",
            "date": "Sun, 27 Sep 2026 16:01:02 GMT",
            "content-length": "191"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "8b626e6d0db3682642ace0920cfddcea"
    },
    {
      "label": "vpc",
      "service": "ec2",
      "operation": "create_vpc",
      "input": {
        "CidrBlock": "10.194.20.0/24"
      },
      "code": "Success",
      "output": {
        "Vpc": {
          "OwnerId": "815602947201",
          "InstanceTenancy": "default",
          "Ipv6CidrBlockAssociationSet": [],
          "CidrBlockAssociationSet": [
            {
              "AssociationId": "vpc-cidr-assoc-477b195ae27d4ae69",
              "CidrBlock": "10.194.20.0/24",
              "CidrBlockState": {
                "State": "associated"
              }
            }
          ],
          "IsDefault": false,
          "VpcId": "vpc-1b220b0a9b11ebf69",
          "State": "pending",
          "CidrBlock": "10.194.20.0/24",
          "DhcpOptionsId": "dopt-910dbed0ba01cb370"
        },
        "ResponseMetadata": {
          "RequestId": "bf54d85b91b5c5de430f9751d9a30e65",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "bf54d85b91b5c5de430f9751d9a30e65",
            "date": "Sun, 27 Sep 2026 16:01:02 GMT",
            "content-length": "684"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "bf54d85b91b5c5de430f9751d9a30e65"
    },
    {
      "label": "subnet-a",
      "service": "ec2",
      "operation": "create_subnet",
      "input": {
        "VpcId": "vpc-1b220b0a9b11ebf69",
        "CidrBlock": "10.194.20.0/25",
        "AvailabilityZone": "us-east-1a"
      },
      "code": "Success",
      "output": {
        "Subnet": {
          "AvailabilityZoneId": "use1-az4",
          "MapCustomerOwnedIpOnLaunch": false,
          "OwnerId": "815602947201",
          "AssignIpv6AddressOnCreation": false,
          "Ipv6CidrBlockAssociationSet": [],
          "SubnetArn": "arn:aws:ec2:us-east-1:815602947201:subnet/subnet-8d88723b4b913033d",
          "EnableDns64": false,
          "Ipv6Native": false,
          "PrivateDnsNameOptionsOnLaunch": {
            "HostnameType": "ip-name",
            "EnableResourceNameDnsARecord": false,
            "EnableResourceNameDnsAAAARecord": false
          },
          "SubnetId": "subnet-8d88723b4b913033d",
          "State": "available",
          "VpcId": "vpc-1b220b0a9b11ebf69",
          "CidrBlock": "10.194.20.0/25",
          "AvailableIpAddressCount": 123,
          "AvailabilityZone": "us-east-1a",
          "DefaultForAz": false,
          "MapPublicIpOnLaunch": false
        },
        "ResponseMetadata": {
          "RequestId": "4d4642b2acf9ad77fd224b710dab48ca",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "4d4642b2acf9ad77fd224b710dab48ca",
            "date": "Sun, 27 Sep 2026 16:01:03 GMT",
            "content-length": "1144"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "4d4642b2acf9ad77fd224b710dab48ca"
    },
    {
      "label": "subnet-b",
      "service": "ec2",
      "operation": "create_subnet",
      "input": {
        "VpcId": "vpc-1b220b0a9b11ebf69",
        "CidrBlock": "10.194.20.128/25",
        "AvailabilityZone": "us-east-1b"
      },
      "code": "Success",
      "output": {
        "Subnet": {
          "AvailabilityZoneId": "use1-az5",
          "MapCustomerOwnedIpOnLaunch": false,
          "OwnerId": "815602947201",
          "AssignIpv6AddressOnCreation": false,
          "Ipv6CidrBlockAssociationSet": [],
          "SubnetArn": "arn:aws:ec2:us-east-1:815602947201:subnet/subnet-15010ea3b615e1c51",
          "EnableDns64": false,
          "Ipv6Native": false,
          "PrivateDnsNameOptionsOnLaunch": {
            "HostnameType": "ip-name",
            "EnableResourceNameDnsARecord": false,
            "EnableResourceNameDnsAAAARecord": false
          },
          "SubnetId": "subnet-15010ea3b615e1c51",
          "State": "available",
          "VpcId": "vpc-1b220b0a9b11ebf69",
          "CidrBlock": "10.194.20.128/25",
          "AvailableIpAddressCount": 123,
          "AvailabilityZone": "us-east-1b",
          "DefaultForAz": false,
          "MapPublicIpOnLaunch": false
        },
        "ResponseMetadata": {
          "RequestId": "19ebc84218aa2288b6a9812c166d016b",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "19ebc84218aa2288b6a9812c166d016b",
            "date": "Sun, 27 Sep 2026 16:01:03 GMT",
            "content-length": "1146"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "19ebc84218aa2288b6a9812c166d016b"
    },
    {
      "label": "sg",
      "service": "ec2",
      "operation": "create_security_group",
      "input": {
        "VpcId": "vpc-1b220b0a9b11ebf69",
        "GroupName": "stackd-lt-guest-15c040e73d",
        "Description": "stackd-lt-guest-15c040e73d"
      },
      "code": "Success",
      "output": {
        "GroupId": "sg-5fc38dcb6f4995835",
        "SecurityGroupArn": "arn:aws:ec2:us-east-1:815602947201:security-group/sg-5fc38dcb6f4995835",
        "ResponseMetadata": {
          "RequestId": "9edc5f6a4050a12de10eb0258c6e3b01",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "9edc5f6a4050a12de10eb0258c6e3b01",
            "date": "Sun, 27 Sep 2026 16:01:03 GMT",
            "content-length": "309"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "9edc5f6a4050a12de10eb0258c6e3b01"
    },
    {
      "label": "http-ingress",
      "service": "ec2",
      "operation": "authorize_security_group_ingress",
      "input": {
        "GroupId": "sg-5fc38dcb6f4995835",
        "IpPermissions": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 8080,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ]
          }
        ]
      },
      "code": "Success",
      "output": {
        "Return": true,
        "SecurityGroupRules": [
          {
            "SecurityGroupRuleId": "sgr-6a71face0eddc0193",
            "GroupId": "sg-5fc38dcb6f4995835",
            "GroupOwnerId": "815602947201",
            "IsEgress": false,
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 8080,
            "CidrIpv4": "0.0.0.0/0",
            "SecurityGroupRuleArn": "arn:aws:ec2:us-east-1:815602947201:security-group-rule/sgr-6a71face0eddc0193"
          }
        ],
        "ResponseMetadata": {
          "RequestId": "aa8a04347c6a1f93070c79af6bb4e491",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "aa8a04347c6a1f93070c79af6bb4e491",
            "date": "Sun, 27 Sep 2026 16:01:04 GMT",
            "content-length": "655"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "aa8a04347c6a1f93070c79af6bb4e491"
    },
    {
      "label": "actual-alb",
      "service": "elbv2",
      "operation": "create_load_balancer",
      "input": {
        "Name": "stackd-lt-guest-15c040e73d",
        "Scheme": "internal",
        "Type": "application",
        "Subnets": [
          "subnet-8d88723b4b913033d",
          "subnet-15010ea3b615e1c51"
        ],
        "SecurityGroups": [
          "sg-5fc38dcb6f4995835"
        ]
      },
      "code": "Success",
      "output": {
        "LoadBalancers": [
          {
            "LoadBalancerArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:loadbalancer/app/stackd-lt-guest-15c040e73d/0000000000000001",
            "DNSName": "internal-stackd-lt-guest-15c040e73d-0d21bbd7fa16f225c6bc.us-east-1.elb.amazonaws.com",
            "CreatedTime": "2026-09-27T16:01:04.413950+00:00",
            "LoadBalancerName": "stackd-lt-guest-15c040e73d",
            "Scheme": "internal",
            "VpcId": "vpc-1b220b0a9b11ebf69",
            "State": {
              "Code": "provisioning"
            },
            "Type": "application",
            "AvailabilityZones": [
              {
                "ZoneName": "us-east-1b",
                "SubnetId": "subnet-15010ea3b615e1c51"
              },
              {
                "ZoneName": "us-east-1a",
                "SubnetId": "subnet-8d88723b4b913033d"
              }
            ],
            "SecurityGroups": [
              "sg-5fc38dcb6f4995835"
            ],
            "IpAddressType": "ipv4"
          }
        ],
        "ResponseMetadata": {
          "RequestId": "44a968b9bfd04c0be2d3787aa526ca86",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "44a968b9bfd04c0be2d3787aa526ca86",
            "date": "Sun, 27 Sep 2026 16:01:04 GMT",
            "content-length": "1141"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "44a968b9bfd04c0be2d3787aa526ca86"
    },
    {
      "label": "actual-instance-targets",
      "service": "elbv2",
      "operation": "create_target_group",
      "input": {
        "Name": "stackd-lt-guest-15c040e73d",
        "Protocol": "HTTP",
        "Port": 8080,
        "VpcId": "vpc-1b220b0a9b11ebf69",
        "TargetType": "instance",
        "HealthCheckIntervalSeconds": 5,
        "HealthCheckTimeoutSeconds": 2,
        "HealthyThresholdCount": 2,
        "UnhealthyThresholdCount": 2
      },
      "code": "Success",
      "output": {
        "TargetGroups": [
          {
            "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:targetgroup/stackd-lt-guest-15c040e73d/0000000000000004",
            "TargetGroupName": "stackd-lt-guest-15c040e73d",
            "Protocol": "HTTP",
            "Port": 8080,
            "VpcId": "vpc-1b220b0a9b11ebf69",
            "HealthCheckProtocol": "HTTP",
            "HealthCheckPort": "traffic-port",
            "HealthCheckEnabled": true,
            "HealthCheckIntervalSeconds": 5,
            "HealthCheckTimeoutSeconds": 2,
            "HealthyThresholdCount": 2,
            "UnhealthyThresholdCount": 2,
            "HealthCheckPath": "/",
            "Matcher": {
              "HttpCode": "200"
            },
            "TargetType": "instance",
            "ProtocolVersion": "HTTP1",
            "IpAddressType": "ipv4"
          }
        ],
        "ResponseMetadata": {
          "RequestId": "b81c5bd91dbadd07c8801d176d19173e",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "b81c5bd91dbadd07c8801d176d19173e",
            "date": "Sun, 27 Sep 2026 16:01:11 GMT",
            "content-length": "1129"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "b81c5bd91dbadd07c8801d176d19173e"
    },
    {
      "label": "short-drain",
      "service": "elbv2",
      "operation": "modify_target_group_attributes",
      "input": {
        "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:targetgroup/stackd-lt-guest-15c040e73d/0000000000000004",
        "Attributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "1"
          }
        ]
      },
      "code": "Success",
      "output": {
        "Attributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "1"
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false"
          },
          {
            "Key": "stickiness.type",
            "Value": "lb_cookie"
          },
          {
            "Key": "stickiness.lb_cookie.duration_seconds",
            "Value": "86400"
          },
          {
            "Key": "stickiness.app_cookie.duration_seconds",
            "Value": "86400"
          },
          {
            "Key": "stickiness.app_cookie.cookie_name",
            "Value": ""
          },
          {
            "Key": "slow_start.duration_seconds",
            "Value": "0"
          },
          {
            "Key": "load_balancing.algorithm.type",
            "Value": "round_robin"
          },
          {
            "Key": "load_balancing.algorithm.anomaly_mitigation",
            "Value": "off"
          },
          {
            "Key": "load_balancing.cross_zone.enabled",
            "Value": "use_load_balancer_configuration"
          },
          {
            "Key": "target_group_health.dns_failover.minimum_healthy_targets.count",
            "Value": "1"
          },
          {
            "Key": "target_group_health.dns_failover.minimum_healthy_targets.percentage",
            "Value": "off"
          },
          {
            "Key": "target_group_health.unhealthy_state_routing.minimum_healthy_targets.count",
            "Value": "1"
          },
          {
            "Key": "target_group_health.unhealthy_state_routing.minimum_healthy_targets.percentage",
            "Value": "off"
          }
        ],
        "ResponseMetadata": {
          "RequestId": "6c6c43c37565f891ab29d4e201a1303f",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "6c6c43c37565f891ab29d4e201a1303f",
            "date": "Sun, 27 Sep 2026 16:01:11 GMT",
            "content-length": "1599"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "6c6c43c37565f891ab29d4e201a1303f"
    },
    {
      "label": "forward-to-guests",
      "service": "elbv2",
      "operation": "create_listener",
      "input": {
        "LoadBalancerArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:loadbalancer/app/stackd-lt-guest-15c040e73d/0000000000000001",
        "Protocol": "HTTP",
        "Port": 80,
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:targetgroup/stackd-lt-guest-15c040e73d/0000000000000004"
          }
        ]
      },
      "code": "Success",
      "output": {
        "Listeners": [
          {
            "ListenerArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:listener/app/stackd-lt-guest-15c040e73d/0000000000000001/0000000000000005",
            "LoadBalancerArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:loadbalancer/app/stackd-lt-guest-15c040e73d/0000000000000001",
            "Port": 80,
            "Protocol": "HTTP",
            "DefaultActions": [
              {
                "Type": "forward",
                "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:targetgroup/stackd-lt-guest-15c040e73d/0000000000000004"
              }
            ]
          }
        ],
        "ResponseMetadata": {
          "RequestId": "7b9a7bbb6dddd4eb3c93047d05f8df92",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "7b9a7bbb6dddd4eb3c93047d05f8df92",
            "date": "Sun, 27 Sep 2026 16:01:12 GMT",
            "content-length": "841"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "7b9a7bbb6dddd4eb3c93047d05f8df92"
    },
    {
      "label": "events-queue",
      "service": "sqs",
      "operation": "create_queue",
      "input": {
        "QueueName": "stackd-lt-guest-15c040e73d"
      },
      "code": "Success",
      "output": {
        "QueueUrl": "https://127.0.0.1:15971/815602947201/stackd-lt-guest-15c040e73d",
        "ResponseMetadata": {
          "RequestId": "530e429195aae1a72756146f1fc72225",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.0",
            "x-amzn-requestid": "530e429195aae1a72756146f1fc72225",
            "date": "Sun, 27 Sep 2026 16:01:12 GMT",
            "content-length": "78"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "530e429195aae1a72756146f1fc72225"
    },
    {
      "label": "queue-arn",
      "service": "sqs",
      "operation": "get_queue_attributes",
      "input": {
        "QueueUrl": "https://127.0.0.1:15971/815602947201/stackd-lt-guest-15c040e73d",
        "AttributeNames": [
          "QueueArn"
        ]
      },
      "code": "Success",
      "output": {
        "Attributes": {
          "QueueArn": "arn:aws:sqs:us-east-1:815602947201:stackd-lt-guest-15c040e73d"
        },
        "ResponseMetadata": {
          "RequestId": "690bf6def8548415126a12c2e37e65f5",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.0",
            "x-amzn-requestid": "690bf6def8548415126a12c2e37e65f5",
            "date": "Sun, 27 Sep 2026 16:01:13 GMT",
            "content-length": "91"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "690bf6def8548415126a12c2e37e65f5"
    },
    {
      "label": "events-permission",
      "service": "sqs",
      "operation": "set_queue_attributes",
      "input": {
        "QueueUrl": "https://127.0.0.1:15971/815602947201/stackd-lt-guest-15c040e73d",
        "Attributes": {
          "Policy": "{\"Version\": \"2012-10-17\", \"Statement\": [{\"Effect\": \"Allow\", \"Principal\": {\"Service\": \"events.amazonaws.com\"}, \"Action\": \"sqs:SendMessage\", \"Resource\": \"arn:aws:sqs:us-east-1:815602947201:stackd-lt-guest-15c040e73d\"}]}"
        }
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "9509d3d9757b3768ed3e83ba60b8a9fe",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.0",
            "x-amzn-requestid": "9509d3d9757b3768ed3e83ba60b8a9fe",
            "date": "Sun, 27 Sep 2026 16:01:13 GMT",
            "content-length": "2"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "9509d3d9757b3768ed3e83ba60b8a9fe"
    },
    {
      "label": "asg-events-rule",
      "service": "events",
      "operation": "put_rule",
      "input": {
        "Name": "stackd-lt-guest-15c040e73d",
        "EventPattern": "{\"source\": [\"aws.autoscaling\"], \"detail\": {\"AutoScalingGroupName\": [\"stackd-lt-guest-15c040e73d\"]}}"
      },
      "code": "Success",
      "output": {
        "RuleArn": "arn:aws:events:us-east-1:815602947201:rule/stackd-lt-guest-15c040e73d",
        "ResponseMetadata": {
          "RequestId": "e928828e907780c6f4abe0ff59a15c31",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.1",
            "x-amzn-requestid": "e928828e907780c6f4abe0ff59a15c31",
            "date": "Sun, 27 Sep 2026 16:01:14 GMT",
            "content-length": "83"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "e928828e907780c6f4abe0ff59a15c31"
    },
    {
      "label": "asg-events-target",
      "service": "events",
      "operation": "put_targets",
      "input": {
        "Rule": "stackd-lt-guest-15c040e73d",
        "Targets": [
          {
            "Id": "queue",
            "Arn": "arn:aws:sqs:us-east-1:815602947201:stackd-lt-guest-15c040e73d"
          }
        ]
      },
      "code": "Success",
      "output": {
        "FailedEntryCount": 0,
        "FailedEntries": [],
        "ResponseMetadata": {
          "RequestId": "75b588d3e743240d4e7006a7eb2aefe2",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.1",
            "x-amzn-requestid": "75b588d3e743240d4e7006a7eb2aefe2",
            "date": "Sun, 27 Sep 2026 16:01:14 GMT",
            "content-length": "41"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "75b588d3e743240d4e7006a7eb2aefe2"
    },
    {
      "label": "refresh-template-one",
      "service": "ec2",
      "operation": "create_launch_template",
      "input": {
        "LaunchTemplateName": "stackd-lt-guest-15c040e73d",
        "LaunchTemplateData": {
          "ImageId": "ami-a48ad9b0ce34af044",
          "InstanceType": "t3.nano",
          "NetworkInterfaces": [
            {
              "DeviceIndex": 0,
              "Groups": [
                "sg-5fc38dcb6f4995835"
              ],
              "DeleteOnTermination": true,
              "AssociatePublicIpAddress": false
            }
          ],
          "UserData": "IyEvYmluL2Jhc2gKc2V0IC1ldQpleGVjID4gPih0ZWUgL2Rldi9jb25zb2xlKSAyPiYxCmluc3RhbmNlPSQoY2F0IC92YXIvbGliL2Nsb3VkL2RhdGEvaW5zdGFuY2UtaWQpCmJvb3Q9JChjYXQgL3Byb2Mvc3lzL2tlcm5lbC9yYW5kb20vYm9vdF9pZCkKbWtkaXIgLXAgL29wdC9yZWZyZXNoLWh0dHAKcHJpbnRmICd7InZlcnNpb24iOiJvbmUiLCJpbnN0YW5jZSI6IiVzIiwiYm9vdCI6IiVzIn1cbicgIiRpbnN0YW5jZSIgIiRib290IiA+L29wdC9yZWZyZXNoLWh0dHAvaW5kZXguaHRtbApjZCAvb3B0L3JlZnJlc2gtaHR0cApleGVjIHB5dGhvbjMgLXUgLW0gaHR0cC5zZXJ2ZXIgODA4MCAtLWJpbmQgMC4wLjAuMAo="
        }
      },
      "code": "Success",
      "output": {
        "LaunchTemplate": {
          "LaunchTemplateId": "lt-07777fc3fc112019a",
          "LaunchTemplateName": "stackd-lt-guest-15c040e73d",
          "CreateTime": "2026-09-27T16:01:15.351858+00:00",
          "CreatedBy": "arn:aws:iam::815602947201:root",
          "DefaultVersionNumber": 1,
          "LatestVersionNumber": 1,
          "Operator": {
            "Managed": false
          }
        },
        "ResponseMetadata": {
          "RequestId": "13f8a3a2c4d004bdf5f29b72df031c79",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "13f8a3a2c4d004bdf5f29b72df031c79",
            "date": "Sun, 27 Sep 2026 16:01:15 GMT",
            "content-length": "565"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "13f8a3a2c4d004bdf5f29b72df031c79"
    },
    {
      "label": "refresh-template-two",
      "service": "ec2",
      "operation": "create_launch_template_version",
      "input": {
        "LaunchTemplateId": "lt-07777fc3fc112019a",
        "SourceVersion": "1",
        "LaunchTemplateData": {
          "UserData": "IyEvYmluL2Jhc2gKc2V0IC1ldQpleGVjID4gPih0ZWUgL2Rldi9jb25zb2xlKSAyPiYxCmluc3RhbmNlPSQoY2F0IC92YXIvbGliL2Nsb3VkL2RhdGEvaW5zdGFuY2UtaWQpCmJvb3Q9JChjYXQgL3Byb2Mvc3lzL2tlcm5lbC9yYW5kb20vYm9vdF9pZCkKbWtkaXIgLXAgL29wdC9yZWZyZXNoLWh0dHAKcHJpbnRmICd7InZlcnNpb24iOiJ0d28iLCJpbnN0YW5jZSI6IiVzIiwiYm9vdCI6IiVzIn1cbicgIiRpbnN0YW5jZSIgIiRib290IiA+L29wdC9yZWZyZXNoLWh0dHAvaW5kZXguaHRtbApjZCAvb3B0L3JlZnJlc2gtaHR0cApleGVjIHB5dGhvbjMgLXUgLW0gaHR0cC5zZXJ2ZXIgODA4MCAtLWJpbmQgMC4wLjAuMAo="
        }
      },
      "code": "Success",
      "output": {
        "LaunchTemplateVersion": {
          "LaunchTemplateId": "lt-07777fc3fc112019a",
          "LaunchTemplateName": "stackd-lt-guest-15c040e73d",
          "VersionNumber": 2,
          "CreateTime": "2026-09-27T16:01:15.894102+00:00",
          "CreatedBy": "arn:aws:iam::815602947201:root",
          "DefaultVersion": false,
          "LaunchTemplateData": {
            "NetworkInterfaces": [
              {
                "AssociatePublicIpAddress": false,
                "DeleteOnTermination": true,
                "DeviceIndex": 0,
                "Groups": [
                  "sg-5fc38dcb6f4995835"
                ]
              }
            ],
            "ImageId": "ami-a48ad9b0ce34af044",
            "InstanceType": "t3.nano",
            "UserData": "IyEvYmluL2Jhc2gKc2V0IC1ldQpleGVjID4gPih0ZWUgL2Rldi9jb25zb2xlKSAyPiYxCmluc3RhbmNlPSQoY2F0IC92YXIvbGliL2Nsb3VkL2RhdGEvaW5zdGFuY2UtaWQpCmJvb3Q9JChjYXQgL3Byb2Mvc3lzL2tlcm5lbC9yYW5kb20vYm9vdF9pZCkKbWtkaXIgLXAgL29wdC9yZWZyZXNoLWh0dHAKcHJpbnRmICd7InZlcnNpb24iOiJ0d28iLCJpbnN0YW5jZSI6IiVzIiwiYm9vdCI6IiVzIn1cbicgIiRpbnN0YW5jZSIgIiRib290IiA+L29wdC9yZWZyZXNoLWh0dHAvaW5kZXguaHRtbApjZCAvb3B0L3JlZnJlc2gtaHR0cApleGVjIHB5dGhvbjMgLXUgLW0gaHR0cC5zZXJ2ZXIgODA4MCAtLWJpbmQgMC4wLjAuMAo="
          },
          "Operator": {
            "Managed": false
          }
        },
        "ResponseMetadata": {
          "RequestId": "858f89ade4799b9060207a9037cc6f8b",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "858f89ade4799b9060207a9037cc6f8b",
            "date": "Sun, 27 Sep 2026 16:01:15 GMT",
            "content-length": "1428"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "858f89ade4799b9060207a9037cc6f8b"
    },
    {
      "label": "refresh-group",
      "service": "autoscaling",
      "operation": "create_auto_scaling_group",
      "input": {
        "AutoScalingGroupName": "stackd-lt-guest-15c040e73d",
        "LaunchTemplate": {
          "LaunchTemplateId": "lt-07777fc3fc112019a",
          "Version": "1"
        },
        "MinSize": 0,
        "MaxSize": 2,
        "DesiredCapacity": 1,
        "VPCZoneIdentifier": "subnet-8d88723b4b913033d",
        "TargetGroupARNs": [
          "arn:aws:elasticloadbalancing:us-east-1:815602947201:targetgroup/stackd-lt-guest-15c040e73d/0000000000000004"
        ],
        "HealthCheckType": "ELB",
        "HealthCheckGracePeriod": 180,
        "DefaultInstanceWarmup": 0
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "67b0fe0ccb9a8bb6e0b1bab2f363631a",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "67b0fe0ccb9a8bb6e0b1bab2f363631a",
            "date": "Sun, 27 Sep 2026 16:01:18 GMT",
            "content-length": "275"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "67b0fe0ccb9a8bb6e0b1bab2f363631a"
    },
    {
      "label": "rolling-refresh",
      "service": "autoscaling",
      "operation": "start_instance_refresh",
      "input": {
        "AutoScalingGroupName": "stackd-lt-guest-15c040e73d",
        "DesiredConfiguration": {
          "LaunchTemplate": {
            "LaunchTemplateId": "lt-07777fc3fc112019a",
            "Version": "2"
          }
        },
        "Preferences": {
          "MinHealthyPercentage": 100,
          "MaxHealthyPercentage": 100,
          "InstanceWarmup": 10,
          "BakeTime": 600
        }
      }
    },
    {
      "label": "cleanup-force-group",
      "service": "autoscaling",
      "operation": "delete_auto_scaling_group",
      "input": {
        "AutoScalingGroupName": "stackd-lt-guest-15c040e73d",
        "ForceDelete": true
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "30dbd25520088cf0495d90042dee2cd1",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "30dbd25520088cf0495d90042dee2cd1",
            "date": "Sun, 27 Sep 2026 16:07:49 GMT",
            "content-length": "275"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "30dbd25520088cf0495d90042dee2cd1"
    },
    {
      "label": "cleanup-delete-hook-launch",
      "service": "autoscaling",
      "operation": "delete_lifecycle_hook",
      "input": {
        "AutoScalingGroupName": "stackd-lt-guest-15c040e73d",
        "LifecycleHookName": "launch"
      },
      "code": "ValidationError",
      "error": {
        "Type": "Sender",
        "Code": "ValidationError",
        "Message": "No Lifecycle Hook found with name 'launch' for group 'stackd-lt-guest-15c040e73d'"
      },
      "request_id": "e244b3836284a96735eace3ee9bb073a"
    },
    {
      "label": "retained-load-balancer-endpoint",
      "service": "elbv2",
      "operation": "describe_load_balancers",
      "input": {
        "LoadBalancerArns": [
          "arn:aws:elasticloadbalancing:us-east-1:815602947201:loadbalancer/app/stackd-lt-guest-15c040e73d/0000000000000001"
        ]
      },
      "code": "Success",
      "output": {
        "LoadBalancers": [
          {
            "LoadBalancerArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:loadbalancer/app/stackd-lt-guest-15c040e73d/0000000000000001",
            "DNSName": "internal-stackd-lt-guest-15c040e73d-0d21bbd7fa16f225c6bc.us-east-1.elb.amazonaws.com",
            "CreatedTime": "2026-09-27T16:01:04.413950+00:00",
            "LoadBalancerName": "stackd-lt-guest-15c040e73d",
            "Scheme": "internal",
            "VpcId": "vpc-1b220b0a9b11ebf69",
            "State": {
              "Code": "active"
            },
            "Type": "application",
            "AvailabilityZones": [
              {
                "ZoneName": "us-east-1b",
                "SubnetId": "subnet-15010ea3b615e1c51"
              },
              {
                "ZoneName": "us-east-1a",
                "SubnetId": "subnet-8d88723b4b913033d"
              }
            ],
            "SecurityGroups": [
              "sg-5fc38dcb6f4995835"
            ],
            "IpAddressType": "ipv4"
          }
        ],
        "ResponseMetadata": {
          "RequestId": "fc030abedae4354388163eb7447e5ff5",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "fc030abedae4354388163eb7447e5ff5",
            "date": "Sun, 27 Sep 2026 16:11:30 GMT",
            "content-length": "1147"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "fc030abedae4354388163eb7447e5ff5"
    },
    {
      "label": "cleanup-force-group",
      "service": "autoscaling",
      "operation": "delete_auto_scaling_group",
      "input": {
        "AutoScalingGroupName": "stackd-lt-guest-15c040e73d",
        "ForceDelete": true
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "a9c9f0d306dc7a281953bad0bf19e959",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "a9c9f0d306dc7a281953bad0bf19e959",
            "date": "Sun, 27 Sep 2026 16:11:31 GMT",
            "content-length": "275"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "a9c9f0d306dc7a281953bad0bf19e959"
    },
    {
      "label": "cleanup-hook-inventory",
      "service": "autoscaling",
      "operation": "describe_lifecycle_hooks",
      "input": {
        "AutoScalingGroupName": "stackd-lt-guest-15c040e73d"
      },
      "code": "Success",
      "output": {
        "LifecycleHooks": [],
        "ResponseMetadata": {
          "RequestId": "c74009066ca814bfbd92b996f5743a6e",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "c74009066ca814bfbd92b996f5743a6e",
            "date": "Sun, 27 Sep 2026 16:11:31 GMT",
            "content-length": "308"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "c74009066ca814bfbd92b996f5743a6e"
    },
    {
      "label": "cleanup-root-volume-absence",
      "service": "ec2",
      "operation": "describe_volumes",
      "input": {
        "VolumeIds": [
          "vol-83fc58ead7ff29c73"
        ]
      },
      "code": "InvalidVolume.NotFound",
      "error": {
        "Code": "InvalidVolume.NotFound",
        "Message": "The volume 'vol-83fc58ead7ff29c73' does not exist."
      },
      "request_id": "c87ba383a07daefdb9bf5432c9f02a31"
    },
    {
      "label": "cleanup-listener",
      "service": "elbv2",
      "operation": "delete_listener",
      "input": {
        "ListenerArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:listener/app/stackd-lt-guest-15c040e73d/0000000000000001/0000000000000005"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "5a9aa77cf66c286c17b461fd4175ff54",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "5a9aa77cf66c286c17b461fd4175ff54",
            "date": "Sun, 27 Sep 2026 16:11:55 GMT",
            "content-length": "252"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "5a9aa77cf66c286c17b461fd4175ff54"
    },
    {
      "label": "cleanup-alb",
      "service": "elbv2",
      "operation": "delete_load_balancer",
      "input": {
        "LoadBalancerArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:loadbalancer/app/stackd-lt-guest-15c040e73d/0000000000000001"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "368dcd370f66f32ab0c95d8fa55d3a0a",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "368dcd370f66f32ab0c95d8fa55d3a0a",
            "date": "Sun, 27 Sep 2026 16:11:55 GMT",
            "content-length": "268"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "368dcd370f66f32ab0c95d8fa55d3a0a"
    },
    {
      "label": "cleanup-targets",
      "service": "elbv2",
      "operation": "delete_target_group",
      "input": {
        "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:815602947201:targetgroup/stackd-lt-guest-15c040e73d/0000000000000004"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "d9c9caa4a77eb851c32b9be31a368e0a",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml; charset=utf-8",
            "x-amzn-requestid": "d9c9caa4a77eb851c32b9be31a368e0a",
            "date": "Sun, 27 Sep 2026 16:11:55 GMT",
            "content-length": "264"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "d9c9caa4a77eb851c32b9be31a368e0a"
    },
    {
      "label": "cleanup-event-target",
      "service": "events",
      "operation": "remove_targets",
      "input": {
        "Rule": "stackd-lt-guest-15c040e73d",
        "Ids": [
          "queue"
        ]
      },
      "code": "Success",
      "output": {
        "FailedEntryCount": 0,
        "FailedEntries": [],
        "ResponseMetadata": {
          "RequestId": "71e9f9e8bf6bff91503ee0f7b6015831",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.1",
            "x-amzn-requestid": "71e9f9e8bf6bff91503ee0f7b6015831",
            "date": "Sun, 27 Sep 2026 16:11:55 GMT",
            "content-length": "41"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "71e9f9e8bf6bff91503ee0f7b6015831"
    },
    {
      "label": "cleanup-event-rule",
      "service": "events",
      "operation": "delete_rule",
      "input": {
        "Name": "stackd-lt-guest-15c040e73d"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "513e10da6b66ea66232c6d3300fc0052",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.1",
            "x-amzn-requestid": "513e10da6b66ea66232c6d3300fc0052",
            "date": "Sun, 27 Sep 2026 16:11:56 GMT",
            "content-length": "2"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "513e10da6b66ea66232c6d3300fc0052"
    },
    {
      "label": "cleanup-event-queue",
      "service": "sqs",
      "operation": "delete_queue",
      "input": {
        "QueueUrl": "https://127.0.0.1:15971/815602947201/stackd-lt-guest-15c040e73d"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "47280038e27c39575f60cba83dc95019",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "application/x-amz-json-1.0",
            "x-amzn-requestid": "47280038e27c39575f60cba83dc95019",
            "date": "Sun, 27 Sep 2026 16:11:56 GMT",
            "content-length": "2"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "47280038e27c39575f60cba83dc95019"
    },
    {
      "label": "cleanup-subnet-b",
      "service": "ec2",
      "operation": "delete_subnet",
      "input": {
        "SubnetId": "subnet-15010ea3b615e1c51"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "b1590a2ae7b03ae0f3ef166f6c227c7a",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "b1590a2ae7b03ae0f3ef166f6c227c7a",
            "date": "Sun, 27 Sep 2026 16:11:58 GMT",
            "content-length": "170"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "b1590a2ae7b03ae0f3ef166f6c227c7a"
    },
    {
      "label": "cleanup-sg",
      "service": "ec2",
      "operation": "delete_security_group",
      "input": {
        "GroupId": "sg-5fc38dcb6f4995835"
      },
      "code": "Success",
      "output": {
        "Return": true,
        "GroupId": "sg-5fc38dcb6f4995835",
        "ResponseMetadata": {
          "RequestId": "96eac1f256ca3aa472a0a5c47a6cbf2a",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "96eac1f256ca3aa472a0a5c47a6cbf2a",
            "date": "Sun, 27 Sep 2026 16:11:59 GMT",
            "content-length": "223"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "96eac1f256ca3aa472a0a5c47a6cbf2a"
    },
    {
      "label": "cleanup-subnet",
      "service": "ec2",
      "operation": "delete_subnet",
      "input": {
        "SubnetId": "subnet-8d88723b4b913033d"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "a159a86c15c06efa899a6865d5f3c62d",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "a159a86c15c06efa899a6865d5f3c62d",
            "date": "Sun, 27 Sep 2026 16:11:59 GMT",
            "content-length": "170"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "a159a86c15c06efa899a6865d5f3c62d"
    },
    {
      "label": "cleanup-vpc",
      "service": "ec2",
      "operation": "delete_vpc",
      "input": {
        "VpcId": "vpc-1b220b0a9b11ebf69"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "534d4343fab37c69d1256b6480824f80",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "534d4343fab37c69d1256b6480824f80",
            "date": "Sun, 27 Sep 2026 16:12:00 GMT",
            "content-length": "164"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "534d4343fab37c69d1256b6480824f80"
    },
    {
      "label": "cleanup-image",
      "service": "ec2",
      "operation": "deregister_image",
      "input": {
        "ImageId": "ami-a48ad9b0ce34af044"
      },
      "code": "Success",
      "output": {
        "Return": true,
        "DeleteSnapshotResults": [],
        "ResponseMetadata": {
          "RequestId": "b4de9077d62fcfd292a750668227a8d0",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "b4de9077d62fcfd292a750668227a8d0",
            "date": "Sun, 27 Sep 2026 16:12:00 GMT",
            "content-length": "227"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "b4de9077d62fcfd292a750668227a8d0"
    },
    {
      "label": "cleanup-snapshot",
      "service": "ec2",
      "operation": "delete_snapshot",
      "input": {
        "SnapshotId": "snap-4691de47885083ec3"
      },
      "code": "Success",
      "output": {
        "ResponseMetadata": {
          "RequestId": "321c2e902be63536ca421c3fbd7ba253",
          "HTTPStatusCode": 200,
          "HTTPHeaders": {
            "content-type": "text/xml;charset=UTF-8",
            "x-amzn-requestid": "321c2e902be63536ca421c3fbd7ba253",
            "date": "Sun, 27 Sep 2026 16:12:00 GMT",
            "content-length": "174"
          },
          "RetryAttempts": 0
        }
      },
      "request_id": "321c2e902be63536ca421c3fbd7ba253"
    }
  ],
  "observations": {
    "image_import": {
      "snapshot": "snap-4691de47885083ec3",
      "nonzero_blocks": 3636,
      "bytes": 3758096384,
      "protocol": "signed EBS direct APIs"
    }
  },
  "owned": {
    "instances": [
      "i-8f566098e680a7252"
    ],
    "snapshot": "snap-4691de47885083ec3",
    "image": "ami-a48ad9b0ce34af044",
    "vpc": "vpc-1b220b0a9b11ebf69",
    "subnet": "subnet-8d88723b4b913033d",
    "subnet_b": "subnet-15010ea3b615e1c51",
    "sg": "sg-5fc38dcb6f4995835",
    "lb": "arn:aws:elasticloadbalancing:us-east-1:815602947201:loadbalancer/app/stackd-lt-guest-15c040e73d/0000000000000001",
    "dns": "internal-stackd-lt-guest-15c040e73d-0d21bbd7fa16f225c6bc.us-east-1.elb.amazonaws.com",
    "tg": "arn:aws:elasticloadbalancing:us-east-1:815602947201:targetgroup/stackd-lt-guest-15c040e73d/0000000000000004",
    "listener": "arn:aws:elasticloadbalancing:us-east-1:815602947201:listener/app/stackd-lt-guest-15c040e73d/0000000000000001/0000000000000005",
    "queue": "https://127.0.0.1:15971/815602947201/stackd-lt-guest-15c040e73d",
    "rule": "stackd-lt-guest-15c040e73d",
    "template": "lt-07777fc3fc112019a",
    "group": "stackd-lt-guest-15c040e73d",
    "volumes": [
      "vol-83fc58ead7ff29c73"
    ]
  },
  "cleanup": {
    "complete": true
  },
  "raw_image": "/tmp/stackd-ubuntu-24.04-server.raw",
  "bios": "/usr/share/seabios/bios-256k.bin",
  "failure": {
    "type": "ReadTimeoutError",
    "message": "Read timeout on endpoint URL: \"https://127.0.0.1:15971/\""
  },
  "cleanup_recovery": "Exact-owned continuation after failed StartInstanceRefresh; original failure retained."
}
